# biopipelines

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.container  LICENSE  README.md  SI_biopipelines_sections.md  UserManual.md  biopipelines.yaml  check-updates  claude.bat  colab.yaml  config.cluster.yaml  config.colab.yaml  config.container.yaml  config.local.yaml  config.yaml  config_SI.yaml  correlation.txt  debug_datasheet_type.py  design_spec_0.npz  dynamicbind.yaml  mkdocs.yml  pipeline.py  pipeline_setup.py  posebuster_test.py  prompt.txt  pyproject.toml  random.txt  refactor.md  resubmit  resubmit.sh  run  setup.py  submit  submit.sh  task.txt  (+6 more)
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
Docs/: ARCHITECTURE_OVERVIEW.md  Architecture.md  DeveloperManual.md  FILTER_ARCHITECTURE.md  FutureTools.md  LLM_prompt.txt  LazyIDs.md  LigandMPNN.md  MixinsTableNavigator.md  Paper_ChemBio.md  README.md  REFACTORED_FILTER_ARCHITECTURE.md  REFACTORING_PROPOSAL.md  REFACTORING_SUMMARY.md  RUNTIME_FILTER_ARCHITECTURE.md  ToolDevelopment.md  ToolReference.md  UserManual.md  developer_guide.md  draft.docx  examples.md  index.md  tool_io_reference.md  user_manual.md
Environments/: ESMFold.yaml  PLIP.yaml  ProteinEnv.yaml  ProteinEnv_pip_requirements.txt  SE3nv.yaml  SE3nv_colab_requirements.txt  admet_ai.yaml  biopipelines.yaml  rbs_designer.yaml
ExamplePipelines/: CABSflex.py  FRET.py  FRET_angle.py  FRET_mutagenesis.py  _boltz2_plip.py  _ligandmpnn_boltz2_cycle.py  _ligandmpnn_boltz2_plip.py  _mmseqs2_lcf_server.py  _mmseqs2_server.py  _rfdaa_contacts.py  boltz2.py  boltz2_covalent.py  boltz2_fluorinated_open_close.py  boltz2_ligands.py  boltz2_ligands_library.py  boltz2_plip_analysis.py  boltz_covalent.py  boltzgen_refold.py  compound_screening.py  denovo_dopamine_boltzgen_part1.py  denovo_dopamine_boltzgen_part2.py  denovo_gentamicin_boltzgen_part1.py  denovo_gentamicin_boltzgen_part2.py  draft_FRET.py  draft_binding_optimization.py  draft_binding_optimization_alternatives.py  draft_binding_optimization_gnina.py  draft_boltz2.py  draft_boltzgen_refold.py  draft_caII.py  draft_compound_screening.py  draft_data_analysis.py  draft_fusion_linker.py  draft_gene_synthesis.py  draft_kinase.py  draft_lysozyme_N_terminus.py  draft_multiple_submission.py  draft_pose_sensitivity.py  draft_pose_sensitivity_gnina.py  draft_ubiquitin.py  (+59 more)
HelpScripts/: biopipelines_io.py  fa_to_csv_fasta.py  fill_gaps.sh  id_map_utils.py  mmseqs2_client.sh  mmseqs2_lcf_client.sh  mmseqs2_lcf_server_gpu.sh  mmseqs2_server_cpu.sh  mmseqs2_server_gpu.sh  pdb_parser.py  pipe_admet_ai.py  pipe_alphafold_confidence.py  pipe_alphafold_msas.py  pipe_angle.py  pipe_average_by_table.py  pipe_bayesian_adjuster.py  pipe_boltz_completion_check.py  pipe_boltz_config.py  pipe_boltz_config_unified.py  pipe_boltz_csv_to_configs.py  pipe_boltz_direct_sequence_config.py  pipe_boltz_fasta_to_configs.py  pipe_boltz_msa_copy.py  pipe_boltz_postprocessing.py  pipe_boltz_protein_ligand_configs.py  pipe_boltz_results.py  pipe_boltzgen.py  pipe_boltzgen_config.py  pipe_boltzgen_import.py  pipe_boltzgen_merge.py  pipe_build_boltz_config_with_global_cache.py  pipe_build_boltz_config_with_msas.py  pipe_cabsflex.py  pipe_check_completion.py  pipe_compound_library.py  pipe_concatenate_datasheets.py  pipe_concatenate_tables.py  pipe_conformational_change.py  pipe_contacts.py  pipe_criterion_confidence.py  (+79 more)
InstallationFiles/: ProteinEnv.yml  ProteinEnvOld.yml  mmseqs_setup.sh  protein_models.sh  protein_notebooks.sh  protein_setup.sh  setup_boltz.txt.rtf  setup_databases.sh
Ligands/: README.md
MyPipelines/: README.md  rifampicin_lmpnn_bayesian_cycle.py
PDBs/: README.md
PipelineScripts/: EXAMPLE_REFACTORED_TOOL.py  __init__.py  alphafold.py  analysis.py  angle.py  average_by_datasheet.py  average_by_table.py  base_config.py  bayesian_adjuster.py  boltz2.py  boltzgen.py  cli.py  combinatorics.py  compound_library.py  concatenate_datasheets.py  concatenate_tables.py  confidence.py  config_manager.py  conformational_change.py  contacts.py  converters.py  datastream.py  datastream_resolver.py  distance.py  distance_selector.py  dna_encoder.py  dynamic_bind.py  entities.py  esmfold.py  extract_metric.py  extract_metrics.py  fetch_structure.py  file_paths.py  filter.py  filter_criterion.py  filter_refactored.py  folders.py  fuse.py  ghostfold.py  (+48 more)
(+529 files in other folders)
