[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopipelines"
version = "1.1.0"
description = "Automated pipeline framework for protein modeling workflows"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml>=6.0",
    "requests",
    "biopython",
    "ipykernel",
    "py3Dmol",
    "openpyxl"
]

[project.scripts]
bp-submit = "biopipelines.cli:submit"
bp-run = "biopipelines.cli:run"
bp-config = "biopipelines.cli:config"
biopipelines-submit = "biopipelines.cli:submit"
biopipelines-run = "biopipelines.cli:run"
biopipelines-config = "biopipelines.cli:config"

[tool.setuptools.packages.find]
include = ["biopipelines*"]
