[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopipelines"
dynamic = ["version"]
description = "Automated pipeline framework for protein modeling workflows"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.31",
    "biopython>=1.84",
    "py3Dmol>=2.4",
    "openpyxl>=3.1",
    "rdkit>=2024.03",
    "prompt_toolkit>=3",
    "ruamel.yaml>=0.17"
]

[project.optional-dependencies]
test = ["pytest>=7"]
# Colab base-Python deps: conda-only packages from biopipelines.yaml that have
# no `openbabel`-named PyPI build. Installed via `pip install -e ".[colab]"`.
colab = ["openbabel-wheel"]
# A Scripting step run in a custom `env` needs biopipelines' deps in that env:
# the runner (pipe_scripting.py) imports the framework to resolve inputs, so the
# requirement holds even for a proxy-only script — not just when execution()
# imports biopipelines. `pip install -e ".[scripting]"` in the custom env pulls
# the full runtime (base deps come with -e .; openbabel matches what tools expect).
scripting = ["openbabel-wheel"]
all = ["pytest>=7", "openbabel-wheel"]

[project.scripts]
bp-submit = "biopipelines.cli:submit"
bp-config = "biopipelines.cli:config"
bp-run = "biopipelines.cli:run"
bp-warm = "biopipelines.cli:warm"
biopipelines-submit = "biopipelines.cli:submit"
biopipelines-config = "biopipelines.cli:config"
biopipelines-run = "biopipelines.cli:run"
biopipelines-warm = "biopipelines.cli:warm"

[tool.setuptools.packages.find]
include = ["biopipelines*"]

[tool.setuptools.dynamic]
version = {attr = "biopipelines.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not tool_parameters'"
markers = [
    "tool_parameters: opt-in suite that drives every wrapped public-repo tool with a minimal pipeline and asserts each kwarg lands in the emitted artifacts. GPU-bound, so excluded by default; run with 'pytest tests/tool_parameters -m tool_parameters -v'.",
]
